--- a/services-inquiry.html
+++ b/services-inquiry.html
@@ -143,11 +143,11 @@
               <textarea name="inquiry_message" rows="6" class="form-control" placeholder="Inquiry Message *" required></textarea>
             </div>
 
-           <!-- Select a Product -->
+           <!-- Select a services -->
 <div class="col-md-12">
-  <label for="product">Select a Product</label>
-  <select id="product" name="product" class="form-control">
-    <option value="Select a Product">Select a Product</option>
+  <label for="services">Select a Services</label>
+  <select id="services" name="product" class="form-control">
+    <option value="Select a services">Select a services</option>
     <option value="Relocation Survey">Relocation Survey</option>
     <option value="Verification Survey">Verification Survey</option>
     <option value="Topographic Survey">Topographic Survey</option>
