--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="./" class="active">Home</a></li>
+          <li><a href="./about">About</a></li>
           <li><a href="portfolio-details.html">Product</a></li>
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
