--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="./" class="active">Home</a></li>
           <li><a href="./about">About</a></li>
-          <li><a href="portfolio-details.html">Product</a></li>
+          <li><a href="./product">Product</a></li>
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
@@ -73,11 +73,11 @@
           <li class="dropdown">
             <a href="#"><span>Customer Care</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="product-inquiry.html">Product Inquiry</a></li>
+              <li><a href="./product-inquiry">Product Inquiry</a></li>
               <li class="dropdown">
                 <a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="services-inquiry.html">Inquiry</a></li>
+                  <li><a href="./services-inquiry">Inquiry</a></li>
                 </ul>
               </li>
             </ul>
