--- a/abs.html
+++ b/abs.html
@@ -42,8 +42,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" >Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/" >Home</a></li>
+          <li><a href="./about">About</a></li>
           <li><a href="./product">Product</a></li>
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
