--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
 
       <<nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" >Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="/" >Home</a></li>
+          <li><a href="./about" class="active">About</a></li>
           <li><a href="./product">Product</a></li>
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
