--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
       <<nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/" >Home</a></li>
+          <li><a href="./" >Home</a></li>
           <li><a href="./about" class="active">About</a></li>
           <li><a href="./product">Product</a></li>
           <li class="dropdown">
