--- a/abs.html
+++ b/abs.html
@@ -42,7 +42,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/" >Home</a></li>
+          <li><a href="./" >Home</a></li>
           <li><a href="./about">About</a></li>
           <li><a href="./product">Product</a></li>
           <li class="dropdown">
