--- a/services-inquiry.html
+++ b/services-inquiry.html
@@ -43,9 +43,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" >Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="portfolio-details.html">Product</a></li>
+          <li><a href="./" >Home</a></li>
+          <li><a href="./about">About</a></li>
+          <li><a href="./product">Product</a></li>
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
@@ -67,11 +67,11 @@
           <li class="dropdown">
             <a href="#"><span>Customer Care</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="product-inquiry.html">Product Inquiry</a></li>
+              <li><a href="./product-inquiry">Product Inquiry</a></li>
               <li class="dropdown">
                 <a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="services-inquiry.html" class="active">Inquiry</a></li>
+                  <li><a href="./product-inquiry" class="active">Inquiry</a></li>
                 </ul>
               </li>
             </ul>
