--- a/cad.html
+++ b/cad.html
@@ -48,19 +48,19 @@
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="reloc.html?service=RelocationSurvey" >Relocation Survey</a></li>
-              <li><a href="verifi.html?service=VerificationSurvey">Verification Survey</a></li>
-              <li><a href="topo.html?service=TopographicSurvey">Topographic Survey</a></li>
-              <li><a href="subdi.html?service=SubdivisionSurvey">Subdivision Survey</a></li>
-              <li><a href="cs.html?service=ConsolidationSurvey">Consolidation Survey</a></li>
-              <li><a href="css.html?service=ConsolidationSubdivisionSurvey">Consolidation - Subdivision Survey</a></li>
-              <li><a href="abs.html?service=AsBuiltSurvey">As-Built Survey</a></li>
-              <li><a href="hbs.html?service=HydrographicBathymetricSurvey">Hydrographic & Bathymetric Survey</a></li>
-              <li><a href="caap.html?service=CAAPHeightClearanceApplication">CAAP Height Clearance Application</a></li>
-              <li><a href="am.html?service=AerialMapping">Aerial Mapping</a></li>
-              <li><a href="lotplan.html?service=LotPlanWithVicinityMap">Lot Plan With Vicinity Map</a></li>
-              <li><a href="sp.html?service=SketchPlan">Sketch Plan</a></li>
-              <li><a href="cad.html?service=CADPlotting" class="active">CAD Plotting</a></li>
+              <li><a href="./reloc">Relocation Survey</a></li>
+              <li><a href="./verifi">Verification Survey</a></li>
+              <li><a href="./topo">Topographic Survey</a></li>
+              <li><a href="./subdi">Subdivision Survey</a></li>
+              <li><a href="./cs">Consolidation Survey</a></li>
+              <li><a href="./css">Consolidation - Subdivision Survey</a></li>
+              <li><a href="./abs">As-Built Survey</a></li>
+              <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
+              <li><a href="./caap">CAAP Height Clearance Application</a></li>
+              <li><a href="./am">Aerial Mapping</a></li>
+              <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
+              <li><a href="./sp">Sketch Plan</a></li>
+              <li><a href="./cad" class"active" >CAD Plotting</a></li>
             </ul>
           </li>
           <li class="dropdown">
