--- a/abs.html
+++ b/abs.html
@@ -54,7 +54,7 @@
               <li><a href="./subdi">Subdivision Survey</a></li>
               <li><a href="./cs">Consolidation Survey</a></li>
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
-              <li><a href="./abs">As-Built Survey</a></li>
+              <li><a href="./abs" class"active" >As-Built Survey</a></li>
               <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
               <li><a href="./caap">CAAP Height Clearance Application</a></li>
               <li><a href="./am">Aerial Mapping</a></li>
