--- a/am.html
+++ b/am.html
@@ -57,7 +57,7 @@
               <li><a href="./abs">As-Built Survey</a></li>
               <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
               <li><a href="./caap">CAAP Height Clearance Application</a></li>
-              <li><a href="./am">Aerial Mapping</a></li>
+              <li><a href="./am" class"active" >Aerial Mapping</a></li>
               <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
               <li><a href="./sp">Sketch Plan</a></li>
               <li><a href="./cad">CAD Plotting</a></li>
