--- a/verifi.html
+++ b/verifi.html
@@ -70,7 +70,7 @@
               <li class="dropdown">
                 <a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="/.services-inquiry">Inquiry</a></li>
+                  <li><a href="./services-inquiry">Inquiry</a></li>
                 </ul>
               </li>
             </ul>
