--- a/caap.html
+++ b/caap.html
@@ -56,7 +56,7 @@
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
               <li><a href="./abs">As-Built Survey</a></li>
               <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
-              <li><a href="./caap" class"active" >CAAP Height Clearance Application</a></li>
+              <li><a href="./caap" class="active" >CAAP Height Clearance Application</a></li>
               <li><a href="./am">Aerial Mapping</a></li>
               <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
               <li><a href="./sp">Sketch Plan</a></li>
