--- a/cad.html
+++ b/cad.html
@@ -60,7 +60,7 @@
               <li><a href="./am">Aerial Mapping</a></li>
               <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
               <li><a href="./sp">Sketch Plan</a></li>
-              <li><a href="./cad" class"active" >CAD Plotting</a></li>
+              <li><a href="./cad" class="active" >CAD Plotting</a></li>
             </ul>
           </li>
           <li class="dropdown">
