--- a/cs.html
+++ b/cs.html
@@ -52,7 +52,7 @@
               <li><a href="./verifi">Verification Survey</a></li>
               <li><a href="./topo">Topographic Survey</a></li>
               <li><a href="./subdi">Subdivision Survey</a></li>
-              <li><a href="./cs" class"active" >Consolidation Survey</a></li>
+              <li><a href="./cs" class="active" >Consolidation Survey</a></li>
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
               <li><a href="./abs">As-Built Survey</a></li>
               <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
