--- a/css.html
+++ b/css.html
@@ -53,7 +53,7 @@
               <li><a href="./topo">Topographic Survey</a></li>
               <li><a href="./subdi">Subdivision Survey</a></li>
               <li><a href="./cs">Consolidation Survey</a></li>
-              <li><a href="./css" class"active" >Consolidation - Subdivision Survey</a></li>
+              <li><a href="./css" class="active" >Consolidation - Subdivision Survey</a></li>
               <li><a href="./abs">As-Built Survey</a></li>
               <li><a href="./hbs">Hydrographic & Bathymetric Survey</a></li>
               <li><a href="./caap">CAAP Height Clearance Application</a></li>
