--- a/hbs.html
+++ b/hbs.html
@@ -55,7 +55,7 @@
               <li><a href="./cs">Consolidation Survey</a></li>
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
               <li><a href="./abs">As-Built Survey</a></li>
-              <li><a href="./hbs" class"active">Hydrographic & Bathymetric Survey</a></li>
+              <li><a href="./hbs" class="active">Hydrographic & Bathymetric Survey</a></li>
               <li><a href="./caap">CAAP Height Clearance Application</a></li>
               <li><a href="./am">Aerial Mapping</a></li>
               <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
