--- a/reloc.html
+++ b/reloc.html
@@ -48,7 +48,7 @@
           <li class="dropdown">
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
-               <li><a href="./reloc" class"active" >Relocation Survey</a></li>
+               <li><a href="./reloc" class="active" >Relocation Survey</a></li>
               <li><a href="./verifi">Verification Survey</a></li>
               <li><a href="./topo">Topographic Survey</a></li>
               <li><a href="./subdi">Subdivision Survey</a></li>
