--- a/sp.html
+++ b/sp.html
@@ -59,7 +59,7 @@
               <li><a href="./caap">CAAP Height Clearance Application</a></li>
               <li><a href="./am">Aerial Mapping</a></li>
               <li><a href="./lotplan">Lot Plan With Vicinity Map</a></li>
-              <li><a href="./sp" class"active">Sketch Plan</a></li>
+              <li><a href="./sp" class="active">Sketch Plan</a></li>
               <li><a href="./cad">CAD Plotting</a></li>
             </ul>
           </li>
