--- a/subdi.html
+++ b/subdi.html
@@ -51,7 +51,7 @@
                <li><a href="./reloc">Relocation Survey</a></li>
               <li><a href="./verifi">Verification Survey</a></li>
               <li><a href="./topo">Topographic Survey</a></li>
-              <li><a href="./subdi" class"active" >Subdivision Survey</a></li>
+              <li><a href="./subdi" class="active" >Subdivision Survey</a></li>
               <li><a href="./cs">Consolidation Survey</a></li>
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
               <li><a href="./abs">As-Built Survey</a></li>
