--- a/topo.html
+++ b/topo.html
@@ -50,7 +50,7 @@
             <ul class="dropdown-menu">
                <li><a href="./reloc">Relocation Survey</a></li>
               <li><a href="./verifi">Verification Survey</a></li>
-              <li><a href="./topo" class"active">Topographic Survey</a></li>
+              <li><a href="./topo" class="active">Topographic Survey</a></li>
               <li><a href="./subdi">Subdivision Survey</a></li>
               <li><a href="./cs">Consolidation Survey</a></li>
               <li><a href="./css">Consolidation - Subdivision Survey</a></li>
