--- a/verifi.html
+++ b/verifi.html
@@ -49,7 +49,7 @@
             <a href="#">Services <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
                <li><a href="./reloc">Relocation Survey</a></li>
-              <li><a href="./verifi" class"active">Verification Survey</a></li>
+              <li><a href="./verifi" class="active">Verification Survey</a></li>
               <li><a href="./topo">Topographic Survey</a></li>
               <li><a href="./subdi">Subdivision Survey</a></li>
               <li><a href="./cs">Consolidation Survey</a></li>
