--- a/services-inquiry.html
+++ b/services-inquiry.html
@@ -118,7 +118,7 @@
       <!-- Contact Form -->
       <div class="col-lg-6">
 
-        <form action="https://api.web3forms.com/submit" method="post" class="web3-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://api.web3forms.com/submit" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
 
             <!-- Hidden Access Key -->
