--- a/services-inquiry.html
+++ b/services-inquiry.html
@@ -163,7 +163,7 @@
            <!-- Select a Product -->
 <div class="col-md-12">
   <label for="services">Select a services</label>
-  <select id="product" name="product" class="form-control">
+  <select id="services" name="services" class="form-control">
     <option value="Select a services">Select a services</option>
     <option value="Relocation Survey">Relocation Survey</option>
     <option value="Verification Survey">Verification Survey</option>
