--- a/product-inquiry.html
+++ b/product-inquiry.html
@@ -115,8 +115,11 @@
 
       <!-- Contact Form -->
       <div class="col-lg-6">
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://api.web3forms.com/submit" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
+
+            <!-- Hidden Access Key -->
+            <input type="hidden" name="access_key" value="33e86504-c05d-4b7f-b141-d362a2005c39">
 
             <!-- Full Name -->
             <div class="col-md-6">
